--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -140,7 +140,7 @@
 <!-- Libreria Vuejs -->
 <script>
 
-    var URL_API = "https://s9jy73nwm2.execute-api.us-east-1.amazonaws.com/default/borrame_06112020";
+    var URL_API = "https://k7uw8l2b19.execute-api.us-east-1.amazonaws.com/test2/test";
 
     var app = new Vue({
 
